# uba-AyEd1

./: .gitignore  README.md
EntregasLabos/Entrega1/Resoluciones/: CMakeLists.txt  LABO01-FIBONACCI.cpp  LABO02-DIVISION.cpp  LABO02-SWAP.cpp  LABO03-ESTAORDENADO.cpp  LABO03-ROTAR.cpp  README.md
EntregasLabos/Entrega2/Resoluciones/: CMakeLists.txt  Existe_pico.cpp  README.md  bug_mcd.cpp  min_subsecuencia.cpp  ordenar.cpp
EntregasLabos/Entrega3/Resoluciones/: README.md  esTriangular.cpp  rotar.cpp  subsecuencia.cpp  trasponer.cpp
EntregasLabos/Entrega4/Resoluciones/: bpp.cpp  menorMasGrande.cpp  puntoFijo.cpp
Labos/Prácticas/Enunciados/03.Archivos/archivos/: cantidadApariciones.in
Labos/Prácticas/Enunciados/enunciado_labo03_archivos/archivos/: 10000NumerosEntre1y50.in  cantidadAparicionesDePalabra.in  ordenarSecuencia1.in  ordenarSecuencia2.in  promedio1.in  promedio2.in
Labos/Prácticas/Enunciados/enunciado_labo03_archivos/src/: generador.cpp  generador.h  main.cpp  vectores.cpp  vectores.h
Labos/Prácticas/Soluciones/Labo 1/: CMakeLists.txt  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp  ejercicio8.cpp
Labos/Prácticas/Soluciones/Labo 10/: CMakeLists.txt  README.md  labo10  main.cpp
Labos/Prácticas/Soluciones/Labo 10/src/: ejercicios.cpp  ejercicios.h
Labos/Prácticas/Soluciones/Labo 10/tests/: busquedaBinariaTEST.cpp  countigSortTEST.cpp  indicePicoTEST.cpp  insertionSortTEST.cpp  jumpSearchTEST.cpp  menorMasGrandeTEST.cpp  puntoFijoTEST.cpp  sortTEST.cpp
Labos/Prácticas/Soluciones/Labo 11/: README.md
Labos/Prácticas/Soluciones/Labo 11/anagramas/src/: CMakeLists.txt  anagramas  anagramas.h  ingles.dic  main.cpp
Labos/Prácticas/Soluciones/Labo 11/bin-package/src/: BPP.in  BPP2.in  BPP3.in  BPP4.in  CMakeLists.txt  bin-package  main.cpp
Labos/Prácticas/Soluciones/Labo 2/: CMakeLists.txt  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp  ejercicio8.cpp  ejercicio9.cpp
Labos/Prácticas/Soluciones/Labo 3/: CMakeLists.txt  main.cpp  vectores.cpp  vectores.h
Labos/Prácticas/Soluciones/Labo 3/archivos/: interseccion1.in  interseccion2.in  leerVector.in
Labos/Prácticas/Soluciones/Labo 4/: CMakeLists.txt  cases.cpp  cases.h  ejercicios.cpp  ejercicios.h  main.cpp
Labos/Prácticas/Soluciones/Labo 4/datos/: SensadoRemoto.txt  loremIpsum.txt  losprofetas.txt
Labos/Prácticas/Soluciones/Labo 5/: CMakeLists.txt  cases.cpp  cases.h  ejercicios.cpp  ejercicios.h  laboCiclos  main.cpp
Labos/Prácticas/Soluciones/Labo 6/: CMakeLists.txt  main.cpp
Labos/Prácticas/Soluciones/Labo 6/ej1/: esPrimo.cpp  esPrimo.h  puntaje.cpp  puntaje.h
Labos/Prácticas/Soluciones/Labo 6/ej1/Test/: esPrimoTest.cpp  puntajeTEST.cpp
Labos/Prácticas/Soluciones/Labo 6/ej2/: llenarTaxis.cpp  llenarTaxis.h
Labos/Prácticas/Soluciones/Labo 6/ej2/Test/: llenarTaxisTEST.cpp
Labos/Prácticas/Soluciones/Labo 6/ej3/: baldosasDelPiso.cpp  baldosasDelPiso.h  contandoDragones.cpp  contandoDragones.h  electores.cpp  electores.h
Labos/Prácticas/Soluciones/Labo 6/ej3/Test/: baldosasDelPisoTEST.cpp  contandoDragonesTEST.cpp  electoresTEST.cpp
Labos/Prácticas/Soluciones/Labo 7/: CMakeLists.txt  cases.cpp  cases.h  ejercicios.cpp  ejercicios.h  main.cpp
Labos/Prácticas/Soluciones/Labo 7/test/: contarPicosTEST.cpp  diferenciaDiagonalesTEST.cpp  esTriangular.cpp  esTriangularTEST.cpp  hayAmenazaTEST.cpp  multiplicarTEST.cpp  productoVectorialTEST.cpp  promediarTEST.cpp  tatetiTEST.cpp  traspuestaTEST.cpp
Labos/Prácticas/Soluciones/Labo 8/: CMakeLists.txt  README.md  labo8  main.cpp
Labos/Prácticas/Soluciones/Labo 8/risas/: 01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  (+13 more)
Labos/Prácticas/Soluciones/Labo 8/src/: ejercicios.cpp  ejercicios.h  risas.cpp  risas.h
Labos/Prácticas/Soluciones/Labo 8/tests/: risasTEST.cpp  tests.cpp
Labos/Prácticas/Soluciones/Labo 9/: CMakeLists.txt  README.md  ejercicios.cpp  ejercicios.h  graficar.py  main.cpp  requirements.txt
Prácticas/Soluciones/: Algo1Macros.tex  Base.tex  Práctica 1.aux  Práctica 1.fdb_latexmk  Práctica 1.fls  Práctica 1.out  Práctica 1.tex  Práctica 1.toc  Práctica 2.tex  Práctica 3.tex  Práctica 4.tex  Práctica 5.tex  Práctica 6.tex  Práctica 7.md  Práctica 8.md  __latexindent_temp.tex
