cmake_minimum_required(VERSION 3.22)
project(Resoluciones)

set(CMAKE_CXX_STANDARD 14)

add_executable(fibonacci LABO01-FIBONACCI.cpp)
add_executable(division LABO02-DIVISION.cpp)
add_executable(swap LABO02-SWAP.cpp)
add_executable(estaOrdenado LABO03-ESTAORDENADO.cpp)
add_executable(rotar LABO03-ROTAR.cpp)

