cmake_minimum_required(VERSION 3.22)
project(Labo_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Labo_1_ejercicio1 ejercicio1.cpp)
add_executable(Labo_1_ejercicio2 ejercicio2.cpp)
add_executable(Labo_1_ejercicio3 ejercicio3.cpp)
add_executable(Labo_1_ejercicio4 ejercicio4.cpp)
add_executable(Labo_1_ejercicio5 ejercicio5.cpp)
add_executable(Labo_1_ejercicio6 ejercicio6.cpp)
add_executable(Labo_1_ejercicio7 ejercicio7.cpp)
add_executable(Labo_1_ejercicio8 ejercicio8.cpp)

