cmake_minimum_required(VERSION 3.22)
project(Labo_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Labo_3_ejercicio1 ejercicio1.cpp)
add_executable(Labo_3_ejercicio2 ejercicio2.cpp)
add_executable(Labo_3_ejercicio3 ejercicio3.cpp)
add_executable(Labo_3_ejercicio4 ejercicio4.cpp)
add_executable(Labo_3_ejercicio5 ejercicio5.cpp)
add_executable(Labo_3_ejercicio6 ejercicio6.cpp)
add_executable(Labo_3_ejercicio7 ejercicio7.cpp)
add_executable(Labo_3_ejercicio8 ejercicio8.cpp)
add_executable(Labo_3_ejercicio9 ejercicio9.cpp)
